--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "nodemailer": "^6.9.14",
     "otp-generator": "^4.0.1",
     "socket.io": "^4.7.5",
-    "stripe": "^16.9.0"
+    "stripe": "^16.9.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
