--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.1",
     "mongoose": "^8.4.4",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nanoid": "^3.0.0",
@@ -33,7 +34,8 @@
     "otp-generator": "^4.0.1",
     "socket.io": "^4.7.5",
     "stripe": "^16.9.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
