--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/client-s3": "^3.658.0",
     "@aws-sdk/s3-request-presigner": "^3.658.0",
     "@types/aws-sdk": "^2.7.0",
+    "@types/morgan": "^1.9.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -35,7 +36,7 @@
     "socket.io": "^4.7.5",
     "stripe": "^16.9.0",
     "uuid": "^10.0.0",
-    "winston": "^3.14.2"
+    "winston": "^3.15.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
