--- a/tsconfig.json
+++ b/tsconfig.json
@@ -103,6 +103,10 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true  ,
+    "typeRoots": [
+      "./node_modules/@types", // Default location for type definitions
+      "./src/@types"           // Your custom types directory
+    ],                               /* Skip type checking all .d.ts files. */
   }
 }
