--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@types/aws-sdk": "^2.7.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "connect-mongodb-session": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "firebase": "^10.13.0",
     "firebase-admin": "^12.4.0",
     "jsonwebtoken": "^9.0.2",
@@ -35,11 +37,13 @@
     "socket.io": "^4.7.5",
     "stripe": "^16.9.0",
     "uuid": "^10.0.0",
-    "winston": "^3.15.0"
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.1",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
@@ -47,6 +51,6 @@
     "@types/node": "^20.14.9",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.7.2"
   }
 }
